// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders everything when opened 1`] = `
<blaze-alert
  class="hydrated"
  type="brand"
>
  test this!
  <div
    class="c-text c-alert c-alert--brand"
  >
    
  </div>
</blaze-alert>
`;

exports[`Alert renders nothing when closed 1`] = `
<blaze-alert
  class="hydrated"
  type="brand"
>
  test this!
  <div
    class="c-text c-alert c-alert--brand u-display-none"
  >
    
  </div>
</blaze-alert>
`;

exports[`Alert renders nothing when closed 2`] = `
<blaze-alert
  class="hydrated"
  type="brand"
>
  test this!
  <div
    class="c-text c-alert c-alert--brand u-display-none"
  >
    
  </div>
</blaze-alert>
`;

exports[`Alert should work with type set 1`] = `
<blaze-alert
  class="hydrated"
  type="brand"
>
  test this!
  <div
    class="c-text c-alert c-alert--brand u-display-none"
  >
    
  </div>
</blaze-alert>
`;

exports[`Alert should work without parameters 1`] = `
<blaze-alert
  class="hydrated"
>
  test this!
  <div
    class="c-text c-alert c-alert--undefined u-display-none"
  >
    
  </div>
</blaze-alert>
`;
